# vitex

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  new.rs  templates.rs
src/config/: errors.rs  mod.rs  read.rs  validate.rs
src/project/: create.rs
src/templates/: mod.rs  sync.rs  validate.rs
templates/blank/preamble/: preamble.tex  titlecontent.tex
templates/normal/: content.tex  main.tex
templates/normal/preamble/: color.tex  config.tex  flowchart.tex  preamble.tex  titlecontent.tex
