[package]
name = "vitex"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MikMuellerDev/vitex"
description = "A latex templating tool"
license = "GPL-2.0-only"
keywords = ["latex", "templating"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.17"
loggerv = "0.7.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.5.9"
